--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,3 +1,4 @@
+
 plugins {
     id "com.android.application"
     id "kotlin-android"
@@ -38,7 +39,7 @@ android {
     }
 
     defaultConfig {
-        applicationId "in.dapperz"
+        applicationId "in.dapperz.dapperz"
         minSdkVersion 23
         targetSdkVersion 35
         versionCode flutterVersionCode.toInteger()
