--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -74,7 +74,7 @@ dependencies:
   just_audio: ^0.9.46
   audio_session: ^0.1.25
   flutter_staggered_grid_view: ^0.7.0
-
+  video_player: ^2.9.5
 
 dev_dependencies:
   flutter_test:
@@ -108,7 +108,9 @@ flutter:
     - assets/svg/
     - assets/card/
     - assets/gif/
-#   - assets/language/
+    - assets/video/DapperBannerVideoMobile.mp4
+    - assets/gif/dapper.gif
+    #   - assets/language/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
