--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -75,6 +75,7 @@ dependencies:
   audio_session: ^0.1.25
   flutter_staggered_grid_view: ^0.7.0
   video_player: ^2.9.5
+  razorpay_flutter: ^1.3.5
 
 dev_dependencies:
   flutter_test:
